--- a/src/app/servers/servers.detail.tpl.html
+++ b/src/app/servers/servers.detail.tpl.html
@@ -21,15 +21,15 @@
                       id="serverName" 
                       ng-model="serverDetails.server.serverName" 
                       ng-model-options="{ updateOn: 'blur' }"
-                      ng-change="serverDetails.updateServerName()"
+                      ng-change="serverDetails.update({ serverName: serverDetails.server.serverName }, 'Server Name')"
                       placeholder="Server Name" />
               </div>
             </div>
             
             <div class="form-group">
-              <label for="map" class="col-sm-3 control-label">Map</label>
+              <label class="col-sm-3 control-label">Map</label>
               <div class="col-sm-9">
-                <ui-select theme="bootstrap" ng-model="serverDetails.server.map" on-select="serverDetails.updateMap()">
+                <ui-select theme="bootstrap" ng-model="serverDetails.server.map" on-select="serverDetails.updateServer({ map: serverDetails.server.map.serverId }, 'Map')">
                   <ui-select-match placeholder="Select or search for a map...">{{$select.selected.name}}</ui-select-match>
                     <ui-select-choices repeat="map in serverDetails.maps | excludeNull | filter: $select.search">
                       <div ng-bind-html="map.name | highlight: $select.search"></div>
@@ -39,9 +39,12 @@
             </div>
             
             <div class="form-group">
-              <label for="serverName" class="col-sm-3 control-label">Victory Condition</label>
+              <label class="col-sm-3 control-label">Victory Condition</label>
               <div class="col-sm-9">
-                <ui-select theme="bootstrap" ng-model="serverDetails.server.victoryCondition" on-select="">
+                <ui-select 
+                    theme="bootstrap" 
+                    ng-model="serverDetails.server.victoryCondition" 
+                    on-select="serverDetails.updateServer({ victoryCondition: serverDetails.server.victoryCondition.id }, 'Victory Condition')">
                   <ui-select-match placeholder="Select or search for an Victory Condition...">{{$select.selected.name}}</ui-select-match>
                     <ui-select-choices repeat="condition in serverDetails.victoryConditions | excludeNull | filter: $select.search">
                       <span ng-bind-html="condition.name | highlight: $select.search"></span>
@@ -51,9 +54,12 @@
             </div>
             
             <div class="form-group">
-              <label for="serverName" class="col-sm-3 control-label">Opposition Mode</label>
+              <label class="col-sm-3 control-label">Opposition Mode</label>
               <div class="col-sm-9">
-                <ui-select theme="bootstrap" ng-model="serverDetails.server.oppositionMode" on-select="">
+                <ui-select 
+                    theme="bootstrap" 
+                    ng-model="serverDetails.server.oppositionMode" 
+                    on-select="serverDetails.updateServer({ oppositionMode: serverDetails.server.oppositionMode.id }, 'Opposition Mode')">
                   <ui-select-match placeholder="Select or search for an Opposition Mode...">{{$select.selected.name}}</ui-select-match>
                     <ui-select-choices repeat="mode in serverDetails.oppositionModes | excludeNull | filter: $select.search">
                       <span ng-bind-html="mode.name | highlight: $select.search"></span>
@@ -63,9 +69,12 @@
             </div>
             
             <div class="form-group">
-              <label for="serverName" class="col-sm-3 control-label">Team Size</label>
+              <label class="col-sm-3 control-label">Team Size</label>
               <div class="col-sm-9">
-                <ui-select theme="bootstrap" ng-model="serverDetails.server.teamSize" on-select="">
+                <ui-select 
+                    theme="bootstrap" 
+                    ng-model="serverDetails.server.teamSize" 
+                    on-select="serverDetails.updateServer({ teamSize: serverDetails.server.teamSize.id }, 'Team Size')">
                   <ui-select-match placeholder="Select or search for a Team Size...">{{$select.selected.name}}</ui-select-match>
                     <ui-select-choices repeat="size in serverDetails.teamSizes | excludeNull | filter: $select.search">
                       <span ng-bind-html="size.name | highlight: $select.search"></span>
@@ -83,6 +92,7 @@
                       id="timeLimit" 
                       ng-model="serverDetails.server.timeLimit" 
                       ng-model-options="{ updateOn: 'blur' }"
+                      ng-change="serverDetails.updateServer({ timeLimit: serverDetails.server.timeLimit }, 'Time Limit')"
                       min="0"
                       placeholder="Time Limit" />
                 <p class="help-block">Time is in minutes. Use 0 for no limit.</p>
@@ -98,6 +108,7 @@
                       id="startingPoints" 
                       ng-model="serverDetails.server.initialMoney"
                       ng-model-options="{ updateOn: 'blur' }"
+                      ng-change="serverDetails.updateServer({ startingPoints: serverDetails.server.startingPoints }, 'Starting Points')"
                       min="0"
                       placeholder="Starting Points" />
               </div>
@@ -112,15 +123,19 @@
                       id="victoryPoints" 
                       ng-model="serverDetails.server.scoreLimit"
                       ng-model-options="{ updateOn: 'blur' }"
+                      ng-change="serverDetails.updateServer({ scoreLimit: serverDetails.server.scoreLimit }, 'Score Limit')"
                       min="0"
                       placeholder="Victory Points" />
               </div>
             </div>
             
             <div class="form-group">
-              <label for="serverName" class="col-sm-3 control-label">Income Rate</label>
+              <label class="col-sm-3 control-label">Income Rate</label>
               <div class="col-sm-9">
-                <ui-select theme="bootstrap" ng-model="serverDetails.server.incomeRate" on-select="">
+                <ui-select 
+                    theme="bootstrap" 
+                    ng-model="serverDetails.server.incomeRate" 
+                    on-select="serverDetails.updateServer({ incomeRate: serverDetails.server.incomeRate.id }, 'Income Rate')">
                   <ui-select-match placeholder="Select or search for an Income Rate...">{{$select.selected.name}}</ui-select-match>
                     <ui-select-choices repeat="rate in serverDetails.incomeRates | excludeNull | filter: $select.search">
                       <span ng-bind-html="rate.name | highlight: $select.search"></span>
